fix scrollbar

--- a/main/main.css
+++ b/main/main.css
@@ -643,7 +643,6 @@ header .song_side .content .buttons button:nth-child(2):hover{
 header .song_side .popular_song{
     width:90%;;
     height: fit-content;
-    margin-top: 15px;
     margin:auto;
     overflow: auto;
 }
@@ -652,7 +651,7 @@ header .song_side .popular_song{
 }
 
 header .song_side .popular_song .h4{
-    margin-top: 15px;
+    margin-top: 10px;
     display:flex;
     justify-content:space-between;
     align-items:  center;
@@ -668,15 +667,27 @@ header .song_side .popular_song .h4 .bi:hover{
 header .song_side .popular_song .pop_song{
     width:100%;
     height: 150px;
-    margin-top: 15px;
+    margin-top: 10px;
     display:flex;
     overflow: auto;
 }
 /* ẩn viền trượt */
 header .song_side .popular_song .pop_song::-webkit-scrollbar{
-    height: auto;
+    height: 5px;
     width: 100%;
-    background-color: #045d5a;
+}
+
+header .song_side .popular_song .pop_song::-webkit-scrollbar-thumb {
+    background: rgb(15, 51, 180);
+    border-radius: 10px;
+}
+header .song_side .popular_song .pop_song::-webkit-scrollbar-thumb:hover {
+    background: rgb(60, 99, 238);
+}
+header .song_side .popular_song .pop_song::-webkit-scrollbar-track {
+    background-color: rgba(33, 60, 147, 0.566);
+    border: 2px solid rgb(5, 15, 48);
+    border-radius: 10px;
 }
 /* khu vực ảnh nhạc */
 header .song_side .popular_song .pop_song li{
@@ -734,12 +745,33 @@ header .song_side nav ul li .navi {
     text-decoration: none;
 }
 /* popular  */
-header .song_side .popular_artists {
+header .song_side .popular_artists{
     width:90%;
-    height:160px ;
-    margin-top: 20px;
+    height: 150px;
     margin:auto;
 }
+/* ẩn viền trượt */
+header .song_side .popular_artists .item{
+    overflow: auto;
+}
+header .song_side .popular_artists .item::-webkit-scrollbar{
+    height: 5px;
+    width: 100%;
+}
+
+header .song_side .popular_artists .item::-webkit-scrollbar-thumb {
+    background: rgb(15, 51, 180);
+    border-radius: 10px;
+}
+header .song_side .popular_artists .item::-webkit-scrollbar-thumb:hover {
+    background: rgb(60, 99, 238);
+}
+header .song_side .popular_artists .item::-webkit-scrollbar-track {
+    background-color: rgba(33, 60, 147, 0.566);
+    border: 2px solid rgb(5, 15, 48);
+    border-radius: 10px;
+}
+
 header .song_side .popular_artists .h4 {
     display:flex;
     justify-content:space-between;
@@ -759,24 +791,18 @@ header .song_side .popular_artists .item{
     height:auto;
     margin-top: 10px;
     display:flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
 }
-/* thêm trượt ẩn viền */
-header .song_side .popular_artists .item::-webkit-scrollbar{
-    display:none;
 
-}
 header .song_side .popular_artists .item li{
     position: relative;
     cursor: pointer;
     list-style-type: none;
     min-width: 80px;
-    height:80px;
+    height: 80px;
     background-color: #fff;
     border-radius: 50%;
     margin-right: 20px;
-    
+    margin-bottom: 15px;
 }
 header .song_side .popular_artists .item li img{
     width:100%;
@@ -784,6 +810,5 @@ header .song_side .popular_artists .item li img{
     border-radius: 50%;
     position:absolute;
     border: 1px solid white;
-  
 }
 
